# missing-data-gmm

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
documents/: ResearchModule.bib  __init__.py  appendix.tex  beamercolorthemeUniBonn.sty  beamerinnerthemeUniBonn.sty  beamerouterthemeUniBonn.sty  beamerthemeUniBonn.sty  paper.tex  presentation.tex  refs.bib  task.py
documents/resources/: appendix.tex  conclusion.tex  empirical_application.tex  introduction.tex  literature_review.tex  mc_simulations.tex  methodology.tex
src/missing_data_gmm/: config.py  helper.py
src/missing_data_gmm/figures/: __init__.py  task.py
src/missing_data_gmm/missreg/: __init__.py  helper.py  task.py
src/missing_data_gmm/monte_carlo/: __init__.py  complete.py  dagenais.py  designs_helper.py  dummy.py  general_helper.py  gmm.py  helper.py  pdf_helper.py  task.py  task_designs.py  task_pdf.py
src/missing_data_gmm/output_tables/: __init__.py  task.py
